--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,5 +1,5 @@
 <form action="???">
   <h1> Stupid Coaching </h1>
-  <input type="text" name="answer">
+  <input type="text" name="question">
   <input type="submit" value="Ask!">
 </form>
