--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,4 @@
-<form action="???">
+<form action="answer">
   <h1> Stupid Coaching </h1>
   <input type="text" name="question">
   <input type="submit" value="Ask!">
